# agent-assistant

./: .env.example  .gitignore  Dockerfile  INSTALLATION.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_service.py  todos.txt
config/: agent_assistant.service  config.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  DOCKER.md  DOCKER_SETUP.md  GMAIL_SETUP.md  JOB_TRACKING.md  KEYBOARD_SHORTCUTS.md  LOCAL_MODELS.md  MODEL_SELECTION_GUIDE.md  OUTLOOK_SETUP.md  QUICK_REFERENCE.md  RETRY_STRATEGY.md  SETUP_GUIDE.md  STATUS.md  TESTING.md
docs/plans/: job_agent_transformation.md
src/: cli.py  service.py
src/agent/: custom_embeddings.py  document_rag.py  llm_system.py  memory.py  router.py  tools.py  workflow.py  workspace_rag.py
src/agent/email/: __init__.py  account_manager.py  email_rag.py  gmail_provider.py  job_detector.py  outlook_provider.py  provider.py
src/agent/tracking/: __init__.py  database.py  manager.py
src/gui/: hotkey.py  loading.py  popup.py  streaming.py
src/utils/: config.py  logging.py
tests/: test_agent.py  test_agent_prompt.py  test_force_model.py  test_memory.py  test_openai_config.py  test_phase2_email.py  test_quick.sh  test_service_init.py  test_sticky_model.py  test_workspace_rag_consolidated.py
